--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -10,15 +10,16 @@ activityCompose = "1.10.1"
 composeBom = "2025.07.00"
 
 coilCompose = "2.7.0"
-retrofit2Version = "2.11.0"
-okhttp3Version = "4.12.0"
-hiltVersion = "2.51.1"
+retrofit2Version = "3.0.0"
+okhttp3Version = "5.1.0"
+hiltVersion = "2.57"
 hiltNavigationComposeVersion = "1.2.0"
-coroutinesVersion = "1.10.1"
-coroutinesLifecycleVersion = "2.8.7"
-navigationCompose = "2.8.8"
+coroutinesVersion = "1.10.2"
+coroutinesLifecycleVersion = "2.9.2"
+navigationCompose = "2.9.3"
 roomRuntime = "2.7.2"
-storage = "1.5.0"
+storage = "1.6.0"
+playServicesFitness = "21.2.0"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -35,6 +36,7 @@ androidx-ui-tooling-preview = { group = "androidx.compose.ui", name = "ui-toolin
 androidx-ui-test-manifest = { group = "androidx.compose.ui", name = "ui-test-manifest" }
 androidx-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit4" }
 androidx-material3 = { group = "androidx.compose.material3", name = "material3" }
+androidx-material-icons-extended = { group = "androidx.compose.material", name = "material-icons-extended" }
 
 #Room
 androidx-room-compiler = { module = "androidx.room:room-compiler", version.ref = "roomRuntime" }
@@ -67,6 +69,7 @@ hiltCompiler = { group = "com.google.dagger", name = "hilt-compiler", version.re
 #Navigation
 navigationCompose = { group = "androidx.navigation", name = "navigation-compose", version.ref = "navigationCompose" }
 androidx-storage = { group = "androidx.test.services", name = "storage", version.ref = "storage" }
+play-services-fitness = { group = "com.google.android.gms", name = "play-services-fitness", version.ref = "playServicesFitness" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
